Conforming to task spec. Passing checkstyle and findbugs